--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/swiper/swiper.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/flexboxgrid/dist/flexboxgrid.min.css",
+              "./node_modules/swiper/swiper-bundle.css",
               "src/styles.scss"
 
             ],
@@ -98,6 +100,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
