--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.6"
+    "@angular-devkit/build-angular": "^14.2.6",
+    "@types/jest": "^29.2.0"
   }
 }
